# img2spec

./: .editorconfig  .gitignore  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  README_JP.md  TROUBLESHOOTING.md
app/: ImagePreviewWidget.cpp  ImagePreviewWidget.h  MainWindow.cpp  MainWindow.h  main.cpp
core/: GriffinLim.cpp  GriffinLim.h  ImageLoader.cpp  ImageLoader.h  Leveling.cpp  Leveling.h  SpectrogramBuilder.cpp  SpectrogramBuilder.h  Stft.cpp  Stft.h  WavWriter.cpp  WavWriter.h
docs/: QUICK_RELEASE.md  RELEASE.md  RELEASE_v0.2.0.md
docs/images/: README.md
resources/: img2spec.rc
scripts/: create-macos-release.sh
